# uvm

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  auto_bridge.sh  gpt_plan.md  plan.md  suggestions.md  vllm_kv_weight_address_driven_policy.md
workloads/faiss/: README.md  download_sift.sh  pyproject.toml
workloads/faiss/configs/: search.py
workloads/faiss/docs/: cpu-gpu-analysis.md  gpu-kernel-prefetch-analysis.md  ivf-flat-prefetch-optimization.md
workloads/faiss/result/: n5_faiss_phase.json
workloads/faiss/results/: SIFT100M_IVF4096_Flat_uvm_20260216_185543.json  SIFT100M_IVF4096_Flat_uvm_20260217_090955.json  SIFT100M_IVF4096_Flat_uvm_20260217_103137.json  SIFT100M_IVF4096_Flat_uvm_20260228_004607.json  SIFT100M_IVF4096_Flat_uvm_20260228_004916.json  SIFT100M_IVF4096_Flat_uvm_20260228_005208.json  SIFT100M_IVF4096_Flat_uvm_20260228_010212.json  SIFT100M_IVF4096_Flat_uvm_20260228_010910.json  SIFT100M_IVF4096_Flat_uvm_20260228_011319.json  SIFT100M_IVF4096_Flat_uvm_20260228_012238.json  SIFT100M_IVF4096_Flat_uvm_20260228_012756.json  SIFT100M_IVF4096_Flat_uvm_20260228_014252.json  SIFT100M_IVF4096_Flat_uvm_20260228_235730.json  SIFT100M_IVF4096_Flat_uvm_20260301_000039.json  SIFT100M_IVF4096_Flat_uvm_20260301_003018.json  (+46 more)
workloads/llama.cpp/: README.md  analyze_crossblock.py  analyze_crossblock_v2.py  analyze_crossblock_v3.py  analyze_overhead.py  derive_layer_mapping.py  download_models.sh  pyproject.toml  run_e10_fprs.sh  run_e12_qos_eviction.sh  run_exp5_two_tenant.sh  run_exp_adaptive_threshold.sh  simulate_vram.py  test_policies.sh
workloads/vllm/: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_ATTENTION_AWARE_EXPERIMENTS.md  README_SCORE_BRIDGE.md  SCORE_BRIDGE_INTEGRATION.md  analyze_uvm_fault_addresses.py  benchmark_attention_aware.py  check_stage_c1_success.py  check_stage_c2_success.py  check_stage_d2_success.py  check_stage_d_success.py  check_stage_e_success.py  check_stage_f_success.py  check_stage_g_success.py  check_stage_h_success.py  check_stage_i_success.py  check_stage_j_success.py  check_stage_k_success.py  compare_gap_watch_ab.py  compare_stage_c_attention_p20_ab.py  compare_stage_c_backend_ab.py  compare_stage_c_budget_sweep.py  deep_dive_uvm_faults.py  discover_gap_watch.py  example_score_bridge_usage.py  export_allocator_workspace_regions.py  plan_stage_h_weight_expert_actions.py  plot_attention_results.py  pyproject.toml  run_ab_test_gap2.sh  run_exp_attention_aware.sh  run_exp_attention_eviction.sh  run_kv_fault_ratio.sh  run_stage_c_attention_backend_ab.sh  run_stage_c_attention_c1_budget_sweep.sh  run_stage_c_attention_p20_ab.sh  run_stage_d2_kv_budget_check.sh  run_stage_d_kv_budget_check.sh  (+8 more)
workloads/vllm/uvm/: README.md
(+3807 files in other folders)
