[project]
name = "faiss-workload"
version = "0.1.0"
description = "FAISS benchmark workload for gpu_ext paper (Vector Search)"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "matplotlib",
]

[tool.uv]
# faiss is installed from the local submodule build, not from PyPI.
# After building faiss from source, install with:
#   uv pip install -e faiss/build/faiss/python/
