[project]
name = "llama-cpp-workload"
version = "0.1.0"
description = "llama.cpp benchmark workload for gpu_ext paper (Expert Offloading, Multi-Tenant)"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tqdm",
    "huggingface-hub",
    "aiohttp",
    "numpy",
    "pandas",
    "matplotlib",
    "psutil",
]
