[project]
name = "vllm-workload"
version = "0.1.0"
description = "vLLM benchmark workload for gpu_ext paper (KV-cache Offloading)"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.3",
    "matplotlib",
]

[tool.uv]
# vLLM is installed from local submodule (workloads/vllm/vllm/) with UVM support.
# After building vllm from source, install with:
#   cd workloads/vllm && uv pip install -e vllm/
